--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,13 @@
 *.tar.gz
 *.rar
 
+
 AdAstra.iml
 modules.xml
 vcs.xml
 workspace.xml
+lattu.xml
+Project_Default.xml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
